stop using deprecated raw URL constructor